--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
   <script>
     var map = L.map('map').setView([37.8, -122.3], 10);
     var markerLayerGroup = L.layerGroup().addTo(map);
-    L.tileLayer(''http://{s}.tile.osm.org/{z}/{x}/{y}.png'', {
+    L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
       maxZoom: 18,
       minZoom: 5,
       attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
