--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,8 @@
  
 </head>
 <body>
-  <h1 id="title">National Parks</h1>
+  <h1 id="title">blue311-Server</h1>
+  <p>Tiles Courtesy of <a href="http://www.mapquest.com/" target="_blank">MapQuest</a> <img src="http://developer.mapquest.com/content/osm/mq_logo.png"></p>
   <div id="map"></div>
   <script src="//cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
   <script>
@@ -68,6 +69,6 @@
     map.whenReady(getPins)
 
   </script>
-  <span id="fossribbon"><a href="https://openshift.redhat.com/app/console/application_types/custom?name=parks&initial_git_url=https%3A%2F%2Fgithub.com/ryanj/restify-mongodb-parks.git&cartridges[]=nodejs-0.10&cartridges[]=mongodb-2.4">Run me on OpenShift</a></span>
+  <span id="fossribbon"><a href="http://heroku.com">Running on Heroku</a></span>
 </body>
 </html>
